[package]
name = "todo-actix"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP Server
actix-web = "3"
# Configuration helper
config = "0.11.0"
# Serialize and deserialize
serde = "1"
# Lazy static evaluation
once_cell = "1.7.2"